<resources>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_anio_nacimiento">Año de nacimiento</string>
    <string name="hint_correo">Correo</string>
    <string name="boton_seleccionar_foto">Seleccionar foto</string>
    <string name="descripcion_foto">Foto seleccionada</string>
    <string name="boton_guardar">Guardar</string>
    <string name="boton_volver">Volver</string>
    <string name="app_name">SilderMN</string>
    <string-array name="sexo_opciones">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>39 tipos de gay</item>
        <item>Silder</item>
    </string-array>
</resources>